More robust file reading: If UTF-8 fails, try Latin-1